correct z-index to share button and modal

--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -174,7 +174,7 @@ section {
   cursor: pointer;
   -webkit-transition: background-color 200ms ease-in-out;
   transition: background-color 200ms ease-in-out;
-  z-index: 3;
+  z-index: 2;
 }
 
 .preview__attribution__share svg path {
@@ -204,7 +204,7 @@ section {
   padding: 1.375rem 2rem;
   border-radius: 0 0 0.625rem 0.625rem;
   background-color: #48556A;
-  z-index: 2;
+  z-index: 1;
 }
 
 @media screen and (min-width: 60rem) {
